# ChangeLog for dev-java/icedtea
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/icedtea/ChangeLog,v 1.46 2011/11/12 14:50:14 sera Exp $

  12 Nov 2011; Ralph Sennhauser <sera@gentoo.org> icedtea-7.2.0-r1.ebuild:
  Use java-vm_sandbox-predict for installing the controle file

  11 Nov 2011; Vlastimil Babka <caster@gentoo.org> icedtea-7.2.0-r1.ebuild:
  Support building using icedtea-bin-7.

  10 Nov 2011; Ralph Sennhauser <sera@gentoo.org> icedtea-6.1.10.4-r1.ebuild,
  icedtea-7.2.0-r1.ebuild:
  Fix building with unusal locales, bug #330433 #389717

  08 Nov 2011; Ralph Sennhauser <sera@gentoo.org> icedtea-6.1.10.4-r1.ebuild,
  icedtea-7.2.0-r1.ebuild:
  Allow building of icedtea with icedtea-bin-6, bug 389885

  07 Nov 2011; Vlastimil Babka <caster@gentoo.org> -icedtea-6.1.10.4.ebuild,
  icedtea-6.1.10.4-r1.ebuild, icedtea-7.2.0-r1.ebuild:
  Prepare for icedtea-bin version and VMHANDLE migration.

  06 Nov 2011; Vlastimil Babka <caster@gentoo.org> icedtea-7.2.0-r1.ebuild:
  Fix build due to missing ant class when xalan and xerces are not installed,
  bug #389625.

  05 Nov 2011; Vlastimil Babka <caster@gentoo.org> icedtea-7.2.0-r1.ebuild:
  Relax lcms dep to allow the stable 2.0a satisfy it.

  05 Nov 2011; Diego E. Pettenò <flameeyes@gentoo.org> icedtea-7.2.0-r1.ebuild:
  QA fix: add missing cpio dependency.

  04 Nov 2011; Vlastimil Babka <caster@gentoo.org> icedtea-7.2.0-r1.ebuild:
  Add ~x86 keyword.

*icedtea-7.2.0-r1 (04 Nov 2011)

  04 Nov 2011; Vlastimil Babka <caster@gentoo.org> +icedtea-7.2.0-r1.ebuild:
  Version bump from the java-overlay, bug #382485.

  04 Nov 2011; Vlastimil Babka <caster@gentoo.org>
  -files/6.1.10.2-371405-linux_version.patch, -files/6.1.9.6-sparc.patch:
  Remove unused patches.

*icedtea-6.1.10.4-r1 (04 Nov 2011)

  04 Nov 2011; Vlastimil Babka <caster@gentoo.org> +icedtea-6.1.10.4-r1.ebuild:
  Revbump to use EAPI=4 and change the VMHANDLE icedtea6 to the standard