@@ -18,6 +18,6 @@ DIST jdk6-jaf-b20.zip 71243 RMD160 40b49d12c39b7010ee917eb671f3c38cd16f271c SHA1
 DIST jdk6-jaxws-b20.zip 5513069 RMD160 47b2d4fe528d770391e8926299df45cc6f68e9b5 SHA1 08366a70c9e2baa516afc77bb69f9e108e906aa9 SHA256 0c460583898b968a58bf88eb53f90a0e34369e2562d65fb3a143512dfcaeb3eb
 DIST openjdk-6-src-b22-28_feb_2011.tar.gz 45279689 RMD160 2b8f92cdb4d7dd3eb3cbb800a73e1666ee4bf5b1 SHA1 65a60153adbc8bc47fb95bb2b588a9a0b8701c95 SHA256 14a097d45b8c040e984be164a8cefbf22040a9ad57474fe87dd8cf2d0b08328b
 EBUILD icedtea-6.1.10.4-r1.ebuild 11119 RMD160 10bdec87cab8a8bc8ca1db3c41c41b22388bb81e SHA1 5fbd929337fb3b2f0107989022714ebcdb5cf760 SHA256 b32935f23be058836d42ced5d7dad3d42189fe3959394b8c43b94395c431c257
-EBUILD icedtea-7.2.0-r1.ebuild 11204 RMD160 df253bd2252ba79d2639f8bfebfb3ebb062c738b SHA1 a42c92f6c60c9d429c8cc524da8bbbfb678a6501 SHA256 5a06d8626f604e8a750a9aaf5834e5c2afdc79dbd0fb0c55b8dab3b726a7a5db
-MISC ChangeLog 8778 RMD160 9319c7ebcb81092b9fae6d5bb2617666ed42b924 SHA1 7871a568e4c52c8bce1979b336ed5016f80b0c3b SHA256 3ddfd17b0d151e58e81730cebf736723fac52973c25e7617fa9610046ce8ed17
+EBUILD icedtea-7.2.0-r1.ebuild 11602 RMD160 49cd5288f8dcc8cac356cf76bcebd89f84eab01c SHA1 bfe7c813b933a147931ec2bc2e94e1907cad54d8 SHA256 a58d1ec40be3fb74bda539ef5f6f02f017e7e2c843024ee10ec853b849a90191
+MISC ChangeLog 9027 RMD160 3cb953a4bc1bb48dbdec62850de6117310d3b6d2 SHA1 725c8ef93249912ceea715011e58897f8619954b SHA256 a53491918793a0d64e1eb3c095551c9d9fb91da9801707be6aae4368ffaa22d9
 MISC metadata.xml 1567 RMD160 7cb547ff92d8896cdbb0dd53aa682fe31d027b4e SHA1 c42d533a391f98fa303b591a4ba1471e0de94b7c SHA256 596df17fd33825a2abb567685bda63f6ff56cbfa616911199855e3fac8bec5e4
